Finish project and fix footer from overlapping the table at the bottom of page

--- a/style.css
+++ b/style.css
@@ -48,14 +48,13 @@ td {
 }
 
 footer {
-  margin-top: 50px;
+  margin-top: 150px;
   text-align: center;
-  position: fixed;
   width: 100%;
   bottom: 5px;
   background-color: #242f44;
-  z-index: 5;
 }
+
 footer h3 {
   display: inline-block;
   font-size: 14px;
